# COP4533_Programming_Assignment_1

./: CMakeLists.txt  COP4533_Prog_Assi1_PartC_Data.xlsx  Gale-Shapley.h  GaleShapely.cpp  README.md  input.txt  main.cpp
input/: inputInvalid.txt  inputSize128.txt  inputSize16.txt  inputSize256.txt  inputSize32.txt  inputSize4.txt  inputSize64.txt  inputSize8.txt  inputStable1.txt  inputStable2.txt  inputUnstable1.txt
output/: outputStable1.txt  outputStable2.txt  outputUnstable1.txt
src/: GaleShapely.h  Verifier.cpp  Verifier.h  main.cpp
